pkg/db_driver/go_impl/src/go_impl.h

/* Code generated by cmd/cgo; DO NOT EDIT. */

/* package main */


#line 1 "cgo-builtin-export-prolog"

#include <stddef.h>

#ifndef GO_CGO_EXPORT_PROLOGUE_H
#define GO_CGO_EXPORT_PROLOGUE_H

#ifndef GO_CGO_GOSTRING_TYPEDEF
typedef struct { const char *p; ptrdiff_t n; } _GoString_;
extern size_t _GoStringLen(_GoString_ s);
extern const char *_GoStringPtr(_GoString_ s);
#endif

#endif

/* Start of preamble from import "C" comments.  */


#line 5 "impl.go"


#include <stdint.h>
#include <stdlib.h>

typedef enum {
  GO_IMPL_QUERY_VALUE_NULL = 0,
  GO_IMPL_QUERY_VALUE_BYTES = 1,
  GO_IMPL_QUERY_VALUE_INT = 2,
  GO_IMPL_QUERY_VALUE_UINT = 3,
  GO_IMPL_QUERY_VALUE_FLOAT = 4,
  GO_IMPL_QUERY_VALUE_DOUBLE = 5,
  GO_IMPL_QUERY_VALUE_DATETIME = 6,
  GO_IMPL_QUERY_VALUE_STRING = 7,
} go_impl_query_value_type_t;

typedef enum {
  GO_IMPL_DB_ORACLE = 0,
  GO_IMPL_DB_MSSQL = 1,
  GO_IMPL_DB_PG = 2,
  GO_IMPL_DB_MYSQL = 3,
  GO_IMPL_DB_SQLITE = 4,
  GO_IMPL_DB_REDIS = 5,
  GO_IMPL_DB_MONGODB = 6,
  GO_IMPL_DB_DUCKDB = 7,
} go_impl_db_type_t;

typedef enum {
  GO_IMPL_STREAM_EVENT_HEADER = 0,
  GO_IMPL_STREAM_EVENT_ROW = 1,
  GO_IMPL_STREAM_EVENT_ERROR = 2,
  GO_IMPL_STREAM_EVENT_DONE = 3,
  GO_IMPL_STREAM_EVENT_CONN_OPEN_OK = 4,
  GO_IMPL_STREAM_EVENT_CONN_CLOSE_OK = 5,
  GO_IMPL_STREAM_EVENT_CONN_ERROR = 6,
  GO_IMPL_STREAM_EVENT_KILL_OK = 7,
  GO_IMPL_STREAM_EVENT_CANCEL = 8,
} go_impl_stream_event_type_t;

typedef enum {
  GO_IMPL_DATA_TYPE_NUMBER = 0,
  GO_IMPL_DATA_TYPE_CHAR = 1,
  GO_IMPL_DATA_TYPE_TIME = 2,
  GO_IMPL_DATA_TYPE_BLOB = 3,
  GO_IMPL_DATA_TYPE_JSON = 4,
  GO_IMPL_DATA_TYPE_DATA_SET = 5,
} go_impl_data_type_t;

typedef struct db_query_column_t {
  char* name;
  int32_t data_type;
} db_query_column_t;

typedef struct db_query_value_t {
  int32_t type;
  int64_t int_value;
  uint64_t uint_value;
  float float_value;
  double double_value;
  int64_t datetime_value;
  uint8_t* bytes_value;
  int32_t bytes_len;
} db_query_value_t;

typedef struct db_query_row_t {
  db_query_value_t* values;
  int32_t value_count;
} db_query_row_t;

typedef struct db_query_header_t {
  db_query_column_t* columns;
  int32_t column_count;
  int64_t affected_rows;
} db_query_header_t;

#include "stream_bridge.h"

#line 1 "cgo-generated-wrapper"


/* End of preamble from import "C" comments.  */


/* Start of boilerplate cgo prologue.  */
#line 1 "cgo-gcc-export-header-prolog"

#ifndef GO_CGO_PROLOGUE_H
#define GO_CGO_PROLOGUE_H

typedef signed char GoInt8;
typedef unsigned char GoUint8;
typedef short GoInt16;
typedef unsigned short GoUint16;
typedef int GoInt32;
typedef unsigned int GoUint32;
typedef long long GoInt64;
typedef unsigned long long GoUint64;
typedef GoInt64 GoInt;
typedef GoUint64 GoUint;
typedef size_t GoUintptr;
typedef float GoFloat32;
typedef double GoFloat64;
#ifdef _MSC_VER
#if !defined(__cplusplus) || _MSVC_LANG <= 201402L
#include <complex.h>
typedef _Fcomplex GoComplex64;
typedef _Dcomplex GoComplex128;
#else
#include <complex>
typedef std::complex<float> GoComplex64;
typedef std::complex<double> GoComplex128;
#endif
#else
typedef float _Complex GoComplex64;
typedef double _Complex GoComplex128;
#endif

/*
  static assertion to make sure the file is being used on architecture
  at least with matching size of GoInt.
*/
typedef char _check_for_64_bit_pointer_matching_GoInt[sizeof(void*)==64/8 ? 1:-1];

#ifndef GO_CGO_GOSTRING_TYPEDEF
typedef _GoString_ GoString;
#endif
typedef void *GoMap;
typedef void *GoChan;
typedef struct { void *t; void *v; } GoInterface;
typedef struct { void *data; GoInt len; GoInt cap; } GoSlice;

#endif

/* End of boilerplate cgo prologue.  */

#ifdef __cplusplus
extern "C" {
#endif

extern void go_impl_conn_open_async(int32_t dbType, char* dsn, int64_t dartPort);
extern void go_impl_conn_kill_async(int64_t handle, int64_t dartPort);
extern void go_impl_conn_close_async(int64_t handle, int64_t dartPort);
extern void go_impl_free_cstr(char* s);
extern void go_impl_free_query_header(db_query_header_t* header);
extern void go_impl_free_query_row(db_query_row_t* row);
extern void go_impl_query_stream(int64_t handle, char* sql, int64_t dartPort);

#ifdef __cplusplus
}
#endif