pkg/db_driver/go_impl/lib/go_impl_bindings_generated.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// FFI from `go tool cgo -exportheader` → `src/go_impl.h` only.
///
/// Regenerate: `cd src && go generate` (see `//go:generate` in impl.go)
///
class NativeImpl {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  NativeImpl(ffi.DynamicLibrary dynamicLibrary) : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  NativeImpl.fromLookup(ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup) : _lookup = lookup;

  int go_impl_init_dart_api(
    ffi.Pointer<ffi.Void> data,
  ) {
    return _go_impl_init_dart_api(
      data,
    );
  }

  late final _go_impl_init_dart_apiPtr = _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>)>>(
    'go_impl_init_dart_api',
  );
  late final _go_impl_init_dart_api = _go_impl_init_dart_apiPtr.asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  void go_impl_conn_open_async(
    int dbType,
    ffi.Pointer<ffi.Char> dsn,
    int dartPort,
  ) {
    return _go_impl_conn_open_async(
      dbType,
      dsn,
      dartPort,
    );
  }

  late final _go_impl_conn_open_asyncPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int32, ffi.Pointer<ffi.Char>, ffi.Int64)>>(
        'go_impl_conn_open_async',
      );
  late final _go_impl_conn_open_async = _go_impl_conn_open_asyncPtr
      .asFunction<void Function(int, ffi.Pointer<ffi.Char>, int)>();

  void go_impl_conn_kill_async(
    int handle,
    int dartPort,
  ) {
    return _go_impl_conn_kill_async(
      handle,
      dartPort,
    );
  }

  late final _go_impl_conn_kill_asyncPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Int64)>>(
    'go_impl_conn_kill_async',
  );
  late final _go_impl_conn_kill_async = _go_impl_conn_kill_asyncPtr.asFunction<void Function(int, int)>();

  void go_impl_conn_close_async(
    int handle,
    int dartPort,
  ) {
    return _go_impl_conn_close_async(
      handle,
      dartPort,
    );
  }

  late final _go_impl_conn_close_asyncPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Int64)>>(
    'go_impl_conn_close_async',
  );
  late final _go_impl_conn_close_async = _go_impl_conn_close_asyncPtr.asFunction<void Function(int, int)>();

  void go_impl_free_cstr(
    ffi.Pointer<ffi.Char> s,
  ) {
    return _go_impl_free_cstr(
      s,
    );
  }

  late final _go_impl_free_cstrPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
    'go_impl_free_cstr',
  );
  late final _go_impl_free_cstr = _go_impl_free_cstrPtr.asFunction<void Function(ffi.Pointer<ffi.Char>)>();

  void go_impl_free_query_header(
    ffi.Pointer<db_query_header_t> header,
  ) {
    return _go_impl_free_query_header(
      header,
    );
  }

  late final _go_impl_free_query_headerPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<db_query_header_t>)>>('go_impl_free_query_header');
  late final _go_impl_free_query_header = _go_impl_free_query_headerPtr
      .asFunction<void Function(ffi.Pointer<db_query_header_t>)>();

  void go_impl_free_query_row(
    ffi.Pointer<db_query_row_t> row,
  ) {
    return _go_impl_free_query_row(
      row,
    );
  }

  late final _go_impl_free_query_rowPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<db_query_row_t>)>>(
    'go_impl_free_query_row',
  );
  late final _go_impl_free_query_row = _go_impl_free_query_rowPtr
      .asFunction<void Function(ffi.Pointer<db_query_row_t>)>();

  void go_impl_query_stream(
    int handle,
    ffi.Pointer<ffi.Char> sql,
    int dartPort,
  ) {
    return _go_impl_query_stream(
      handle,
      sql,
      dartPort,
    );
  }

  late final _go_impl_query_streamPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<ffi.Char>, ffi.Int64)>>(
        'go_impl_query_stream',
      );
  late final _go_impl_query_stream = _go_impl_query_streamPtr
      .asFunction<void Function(int, ffi.Pointer<ffi.Char>, int)>();
}

final class _GoString_ extends ffi.Struct {
  external ffi.Pointer<ffi.Char> p;

  @ptrdiff_t()
  external int n;
}

typedef ptrdiff_t = __darwin_ptrdiff_t;
typedef __darwin_ptrdiff_t = ffi.Long;
typedef Dart__darwin_ptrdiff_t = int;

enum go_impl_query_value_type_t {
  GO_IMPL_QUERY_VALUE_NULL(0),
  GO_IMPL_QUERY_VALUE_BYTES(1),
  GO_IMPL_QUERY_VALUE_INT(2),
  GO_IMPL_QUERY_VALUE_UINT(3),
  GO_IMPL_QUERY_VALUE_FLOAT(4),
  GO_IMPL_QUERY_VALUE_DOUBLE(5),
  GO_IMPL_QUERY_VALUE_DATETIME(6),
  GO_IMPL_QUERY_VALUE_STRING(7)
  ;

  final int value;
  const go_impl_query_value_type_t(this.value);

  static go_impl_query_value_type_t fromValue(int value) => switch (value) {
    0 => GO_IMPL_QUERY_VALUE_NULL,
    1 => GO_IMPL_QUERY_VALUE_BYTES,
    2 => GO_IMPL_QUERY_VALUE_INT,
    3 => GO_IMPL_QUERY_VALUE_UINT,
    4 => GO_IMPL_QUERY_VALUE_FLOAT,
    5 => GO_IMPL_QUERY_VALUE_DOUBLE,
    6 => GO_IMPL_QUERY_VALUE_DATETIME,
    7 => GO_IMPL_QUERY_VALUE_STRING,
    _ => throw ArgumentError("Unknown value for go_impl_query_value_type_t: $value"),
  };
}

enum go_impl_db_type_t {
  GO_IMPL_DB_ORACLE(0),
  GO_IMPL_DB_MSSQL(1),
  GO_IMPL_DB_PG(2),
  GO_IMPL_DB_MYSQL(3),
  GO_IMPL_DB_SQLITE(4),
  GO_IMPL_DB_REDIS(5),
  GO_IMPL_DB_MONGODB(6),
  GO_IMPL_DB_DUCKDB(7)
  ;

  final int value;
  const go_impl_db_type_t(this.value);

  static go_impl_db_type_t fromValue(int value) => switch (value) {
    0 => GO_IMPL_DB_ORACLE,
    1 => GO_IMPL_DB_MSSQL,
    2 => GO_IMPL_DB_PG,
    3 => GO_IMPL_DB_MYSQL,
    4 => GO_IMPL_DB_SQLITE,
    5 => GO_IMPL_DB_REDIS,
    6 => GO_IMPL_DB_MONGODB,
    7 => GO_IMPL_DB_DUCKDB,
    _ => throw ArgumentError("Unknown value for go_impl_db_type_t: $value"),
  };
}

enum go_impl_stream_event_type_t {
  GO_IMPL_STREAM_EVENT_HEADER(0),
  GO_IMPL_STREAM_EVENT_ROW(1),
  GO_IMPL_STREAM_EVENT_ERROR(2),
  GO_IMPL_STREAM_EVENT_DONE(3),
  GO_IMPL_STREAM_EVENT_CONN_OPEN_OK(4),
  GO_IMPL_STREAM_EVENT_CONN_CLOSE_OK(5),
  GO_IMPL_STREAM_EVENT_CONN_ERROR(6),
  GO_IMPL_STREAM_EVENT_KILL_OK(7),
  GO_IMPL_STREAM_EVENT_CANCEL(8)
  ;

  final int value;
  const go_impl_stream_event_type_t(this.value);

  static go_impl_stream_event_type_t fromValue(int value) => switch (value) {
    0 => GO_IMPL_STREAM_EVENT_HEADER,
    1 => GO_IMPL_STREAM_EVENT_ROW,
    2 => GO_IMPL_STREAM_EVENT_ERROR,
    3 => GO_IMPL_STREAM_EVENT_DONE,
    4 => GO_IMPL_STREAM_EVENT_CONN_OPEN_OK,
    5 => GO_IMPL_STREAM_EVENT_CONN_CLOSE_OK,
    6 => GO_IMPL_STREAM_EVENT_CONN_ERROR,
    7 => GO_IMPL_STREAM_EVENT_KILL_OK,
    8 => GO_IMPL_STREAM_EVENT_CANCEL,
    _ => throw ArgumentError("Unknown value for go_impl_stream_event_type_t: $value"),
  };
}

final class db_query_column_t extends ffi.Struct {
  external ffi.Pointer<ffi.Char> name;

  @ffi.Int32()
  external int data_type;
}

final class db_query_value_t extends ffi.Struct {
  @ffi.Int32()
  external int type;

  @ffi.Int64()
  external int int_value;

  @ffi.Uint64()
  external int uint_value;

  @ffi.Float()
  external double float_value;

  @ffi.Double()
  external double double_value;

  @ffi.Int64()
  external int datetime_value;

  external ffi.Pointer<ffi.Uint8> bytes_value;

  @ffi.Int32()
  external int bytes_len;
}

final class db_query_row_t extends ffi.Struct {
  external ffi.Pointer<db_query_value_t> values;

  @ffi.Int32()
  external int value_count;
}

final class db_query_header_t extends ffi.Struct {
  external ffi.Pointer<db_query_column_t> columns;

  @ffi.Int32()
  external int column_count;

  @ffi.Int64()
  external int affected_rows;
}

final class GoInterface extends ffi.Struct {
  external ffi.Pointer<ffi.Void> t;

  external ffi.Pointer<ffi.Void> v;
}

final class GoSlice extends ffi.Struct {
  external ffi.Pointer<ffi.Void> data;

  @GoInt()
  external int len;

  @GoInt()
  external int cap;
}

typedef GoInt = GoInt64;
typedef GoInt64 = ffi.LongLong;
typedef DartGoInt64 = int;
